// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentTiming.js should render the componentTiming 1`] = `
<li
  className="component-timing--card"
>
  <h4
    className="component-timing--name"
  >
    ComponentName
  </h4>
  <p
    className="component-timing--detail"
  >
    <span
      className="mobile-hidden component-timing--label"
    >
      Load time:
    </span>
    14.2
    ms
  </p>
</li>
`;

exports[`ComponentTiming.js should render the componentTiming with only a loadTime 1`] = `
<li
  className="component-timing--card"
>
  <p
    className="component-timing--detail"
  >
    <span
      className="mobile-hidden component-timing--label"
    >
      Load time:
    </span>
    14.2
    ms
  </p>
</li>
`;

exports[`ComponentTiming.js should render the componentTiming with only a name 1`] = `
<li
  className="component-timing--card"
>
  <h4
    className="component-timing--name"
  >
    ComponentName
  </h4>
</li>
`;
